Update styles to fix minor alignment, layout and clipping issues

--- a/_styles/alignment.scss
+++ b/_styles/alignment.scss
@@ -1,26 +1,67 @@
-@mixin flex($direction: null, $shrinkGrow: null)
+@mixin flex($direction, $growShrinkBasis)
 {
 	display: flex;
 	@if ($direction)
 	{
 		flex-direction: #{$direction};
 	}
-	@if ($shrinkGrow)
+	@if ($growShrinkBasis)
 	{
-		flex-#{$shrinkGrow}: 1;
+		flex: #{$growShrinkBasis};
 	}
 }
 
-@mixin trbl($top, $right: null, $bottom: null, $left: null)
+@mixin align($content: center, $items: center, $text: center)
 {
+	display: flex;
+	@if ($items)
+	{
+		align-items: #{$items};
+	}
+	@if ($content)
+	{
+		align-content: #{$content};
+	}
+	@if ($text)
+	{
+		text-align: #{$text};
+	}
+}
+
+@mixin justify($content: center, $items: center, $text: center)
+{
+	display: flex;
+	@if ($content)
+	{
+		align-content: #{$content};
+	}
+	@if ($items)
+	{
+		align-items: #{$items};
+	}
+	@if ($text)
+	{
+		text-align: #{$text};
+	}
+}
+
+@mixin position($type, $top: null, $right: null, $bottom: null, $left: null)
+{
+	@if($type)
+	{
+		position: #{$type};
+	}
+
 	@if ($top)
 	{
 		top: #{$top};
 	}
+
 	@if ($right)
 	{
 		right: #{$right};
 	}
+
 	@if ($bottom)
 	{
 		bottom: #{$bottom};
@@ -29,6 +70,7 @@
 	{
 		bottom: #{$top};
 	}
+
 	@if ($left)
 	{
 		left: #{$left};
@@ -41,17 +83,38 @@
 
 .row
 {
-	@include flex(row);
+	display: flex;
+	flex-direction: row;
 }
 
 .col
 {
-	@include flex(column);
+	display: flex;
+	flex-direction: column;
 }
 
 .grow
 {
 	flex-grow: 1;
+}
+
+.shrink
+{
+	flex-shrink: 1;
+}
+
+.align-center
+{
+	display: flex;
+	align-items: center;
+	align-content: center;
+	text-align: center;
+}
+
+.justify-center
+{
+	display: flex;
+	justify-content: center;
 }
 
 .v-spacer-small
@@ -105,47 +168,24 @@
 	align-items: #{$alignment};
 }
 
-.center-h,
-.center-v,
-.center
+@mixin align-center($types...)
 {
-	@include align-all(center);
+	@each $type in $types
+	{
+		@if $type == text
+		{
+			text-align: center;
+		}
+		@else if $type == content
+		{
+			align-content: center;
+		}
+		@else if $type == items
+		{
+			align-items: center;
+		}
+	}
 }
-
-.center
-{
-	margin: auto;
-}
-
-.center-v
-{
-	margin-top: auto;
-	margin-bottom: auto;
-}
-
-.center-h
-{
-	margin-right: auto;
-	margin-left: auto;
-}
-
-@mixin horizontal-align($side, $opposite)
-{
-	@include align-all($side);
-	margin-#{$opposite}: auto;
-	margin-#{$side}: 0;
-}
-
-.left
-{
-	@include horizontal-align(left, right);
-}
-
-.right
-{
-	@include horizontal-align(right, left);
-}
-
 
 .responsive-row-col
 {
