--- a/_styles/background.scss
+++ b/_styles/background.scss
@@ -12,6 +12,7 @@
 	box-shadow: inset 0 -4em 2em -2em var(--bg-primary);
 	color: var(--bg-secondary);
 	perspective: 100px;
+	margin-bottom: -50px;
 }
 
 .bg-cell
