--- a/_styles/text.scss
+++ b/_styles/text.scss
@@ -37,7 +37,7 @@ h1
 
 h1, h2, h3, h4, h5, h6
 {
-	@include flex(column);
+	@include flex(column, 1 1 auto);
 	@include title-text;
 	margin: 0em auto 0.5em auto;
 }
